--- a/src/main/resources/com/example/app/sample.fxml
+++ b/src/main/resources/com/example/app/sample.fxml
@@ -8,20 +8,20 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" prefHeight="466.0" prefWidth="559.0" spacing="20.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.app.HelloController">
+<VBox alignment="CENTER" prefHeight="534.0" prefWidth="698.0" spacing="20.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.app.HelloController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
 
     <Label fx:id="welcomeText" />
-   <AnchorPane prefHeight="446.0" prefWidth="519.0">
+   <AnchorPane prefHeight="481.0" prefWidth="658.0">
       <children>
-         <Button fx:id="encryptionButton" defaultButton="true" layoutX="105.0" layoutY="67.0" mnemonicParsing="false" onAction="#ClickEncryptButton" text="EncryptFile" />
-         <Button fx:id="decryptionButton" defaultButton="true" layoutX="105.0" layoutY="258.0" mnemonicParsing="false" onAction="#ClickDecryptButton" text="DecryptFile" />
-         <TextField fx:id="encryptionText" layoutX="20.0" layoutY="35.0" prefHeight="25.0" prefWidth="222.0" />
-         <TextField fx:id="decryptionText" layoutX="20.0" layoutY="218.0" prefHeight="25.0" prefWidth="222.0" />
-         <TextArea fx:id="DecryptArea" layoutX="286.0" layoutY="29.0" prefHeight="148.0" prefWidth="200.0" />
-         <TextArea fx:id="EncryptArea" layoutX="286.0" layoutY="218.0" prefHeight="148.0" prefWidth="200.0" />
+         <Button fx:id="encryptionButton" defaultButton="true" layoutX="113.0" layoutY="77.0" mnemonicParsing="false" onAction="#ClickEncryptButton" text="EncryptFile" />
+         <Button fx:id="decryptionButton" defaultButton="true" layoutX="104.0" layoutY="282.0" mnemonicParsing="false" onAction="#ClickDecryptButton" text="DecryptFile" />
+         <TextField fx:id="encryptionText" layoutX="39.0" layoutY="35.0" prefHeight="25.0" prefWidth="222.0" />
+         <TextField fx:id="decryptionText" layoutX="31.0" layoutY="244.0" prefHeight="25.0" prefWidth="222.0" />
+         <TextArea fx:id="decryptArea" layoutX="288.0" layoutY="35.0" prefHeight="184.0" prefWidth="353.0" />
+         <TextArea fx:id="encryptArea" layoutX="288.0" layoutY="244.0" prefHeight="184.0" prefWidth="353.0" />
       </children>
    </AnchorPane>
 </VBox>
